tests/test_input_files/good/test_good_var_decl_1.punkt
main {
	var x = 1.
	println x.
	x = 2.
	println x.
}
