tests/test_input_files/bad/test_bad_if_stmt_6.punkt
main {
  if false
    var x = 1.

  println x.
}
